finishes binary tree

--- a/data-structures/Primitives.ipynb
+++ b/data-structures/Primitives.ipynb
@@ -166,18 +166,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random int in range 28: 13\n",
-      "Random int from inclusive range [8,16]: 12\n",
-      "Random int from inclusive range [8,16]: 0.4129763347949498\n",
-      "Reorders a sequence (list, string, or tuple): None ['banana', 'cherry', 'apple']\n",
-      "Random choice from sequence: banana\n"
+      "Random int in range 28: 27\n",
+      "Random int from inclusive range [8,16]: 9\n",
+      "Random float: 0.7660879321410823\n",
+      "Reorders a sequence (list, string, or tuple): None ['apple', 'banana', 'cherry']\n",
+      "Random choice from sequence: cherry\n"
      ]
     }
    ],
@@ -189,7 +189,7 @@
     "assert math.isclose(2.12321312323,2.12321312324)\n",
     "print('Random int in range 28:', random.randrange(28))\n",
     "print('Random int from inclusive range [8,16]:', random.randint(8,16))\n",
-    "print('Random int from inclusive range [8,16]:', random.random())\n",
+    "print('Random float:', random.random())\n",
     "print('Reorders a sequence (list, string, or tuple):', random.shuffle(A), A)\n",
     "print('Random choice from sequence:', random.choice(A))"
    ]
