--- a/data-structures/Arrays.ipynb
+++ b/data-structures/Arrays.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {
+    "toc": true
+   },
+   "source": [
+    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Arrays\" data-toc-modified-id=\"Arrays-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Arrays</a></span><ul class=\"toc-item\"><li><span><a href=\"#Exercises:\" data-toc-modified-id=\"Exercises:-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>Exercises:</a></span><ul class=\"toc-item\"><li><span><a href=\"#Arrays-in-Pythons-are-lists\" data-toc-modified-id=\"Arrays-in-Pythons-are-lists-1.1.1\"><span class=\"toc-item-num\">1.1.1&nbsp;&nbsp;</span>Arrays in Pythons are lists</a></span></li></ul></li><li><span><a href=\"#0.-List-basics-and-examples\" data-toc-modified-id=\"0.-List-basics-and-examples-1.2\"><span class=\"toc-item-num\">1.2&nbsp;&nbsp;</span>0. List basics and examples</a></span><ul class=\"toc-item\"><li><span><a href=\"#5.1-Dutch-flag-problem\" data-toc-modified-id=\"5.1-Dutch-flag-problem-1.2.1\"><span class=\"toc-item-num\">1.2.1&nbsp;&nbsp;</span>5.1 Dutch flag problem</a></span><ul class=\"toc-item\"><li><span><a href=\"#Something-better.\" data-toc-modified-id=\"Something-better.-1.2.1.1\"><span class=\"toc-item-num\">1.2.1.1&nbsp;&nbsp;</span>Something better.</a></span></li></ul></li></ul></li></ul></li></ul></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Arrays\n",
@@ -444,7 +454,54 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.4"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": true,
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "284.594px"
+   },
+   "toc_section_display": true,
+   "toc_window_display": true
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
