--- a/data-structures/Interview-Cake-Problems.ipynb
+++ b/data-structures/Interview-Cake-Problems.ipynb
@@ -1,6 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "toc": true
+   },
+   "source": [
+    "<h1>Problems<span class=\"tocSkip\"></span></h1>\n",
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Problem-1:\" data-toc-modified-id=\"Problem-1:-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Problem 1:</a></span></li></ul></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Problem 1: "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -32,12 +49,12 @@
    "number_sections": true,
    "sideBar": true,
    "skip_h1_title": false,
-   "title_cell": "Table of Contents",
+   "title_cell": "Problems",
    "title_sidebar": "Contents",
-   "toc_cell": false,
+   "toc_cell": true,
    "toc_position": {},
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   },
   "varInspector": {
    "cols": {
