Did a couple interview cake problems

--- a/data-structures/Arrays.ipynb
+++ b/data-structures/Arrays.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Arrays\" data-toc-modified-id=\"Arrays-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Arrays</a></span><ul class=\"toc-item\"><li><span><a href=\"#Exercises:\" data-toc-modified-id=\"Exercises:-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>Exercises:</a></span><ul class=\"toc-item\"><li><span><a href=\"#Arrays-in-Pythons-are-lists\" data-toc-modified-id=\"Arrays-in-Pythons-are-lists-1.1.1\"><span class=\"toc-item-num\">1.1.1&nbsp;&nbsp;</span>Arrays in Pythons are lists</a></span></li></ul></li><li><span><a href=\"#0.-List-basics-and-examples\" data-toc-modified-id=\"0.-List-basics-and-examples-1.2\"><span class=\"toc-item-num\">1.2&nbsp;&nbsp;</span>0. List basics and examples</a></span><ul class=\"toc-item\"><li><span><a href=\"#5.1-Dutch-flag-problem\" data-toc-modified-id=\"5.1-Dutch-flag-problem-1.2.1\"><span class=\"toc-item-num\">1.2.1&nbsp;&nbsp;</span>5.1 Dutch flag problem</a></span><ul class=\"toc-item\"><li><span><a href=\"#Something-better.\" data-toc-modified-id=\"Something-better.-1.2.1.1\"><span class=\"toc-item-num\">1.2.1.1&nbsp;&nbsp;</span>Something better.</a></span></li></ul></li></ul></li></ul></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Arrays\" data-toc-modified-id=\"Arrays-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Arrays</a></span><ul class=\"toc-item\"><li><span><a href=\"#Exercises:\" data-toc-modified-id=\"Exercises:-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>Exercises:</a></span><ul class=\"toc-item\"><li><span><a href=\"#Arrays-in-Pythons-are-lists\" data-toc-modified-id=\"Arrays-in-Pythons-are-lists-1.1.1\"><span class=\"toc-item-num\">1.1.1&nbsp;&nbsp;</span>Arrays in Pythons are lists</a></span></li></ul></li><li><span><a href=\"#0.-List-basics-and-examples\" data-toc-modified-id=\"0.-List-basics-and-examples-1.2\"><span class=\"toc-item-num\">1.2&nbsp;&nbsp;</span>0. List basics and examples</a></span><ul class=\"toc-item\"><li><span><a href=\"#5.1-Dutch-flag-problem\" data-toc-modified-id=\"5.1-Dutch-flag-problem-1.2.1\"><span class=\"toc-item-num\">1.2.1&nbsp;&nbsp;</span>5.1 Dutch flag problem</a></span><ul class=\"toc-item\"><li><span><a href=\"#Something-better.\" data-toc-modified-id=\"Something-better.-1.2.1.1\"><span class=\"toc-item-num\">1.2.1.1&nbsp;&nbsp;</span>Something better.</a></span></li></ul></li></ul></li><li><span><a href=\"#Kata:-array.diff\" data-toc-modified-id=\"Kata:-array.diff-1.3\"><span class=\"toc-item-num\">1.3&nbsp;&nbsp;</span>Kata: array.diff</a></span></li><li><span><a href=\"#Kata:-Does-my-number-look-big-in-this?\" data-toc-modified-id=\"Kata:-Does-my-number-look-big-in-this?-1.4\"><span class=\"toc-item-num\">1.4&nbsp;&nbsp;</span>Kata: Does my number look big in this?</a></span></li></ul></li></ul></div>"
    ]
   },
   {
@@ -431,11 +431,228 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Kata: array.diff\n",
+    "\n",
+    "Your goal in this kata is to implement a difference function, which subtracts one list from another and returns the result.\n",
+    "\n",
+    "It should remove all values from list a, which are present in list b."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1 in [1,2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# first attempt: WRONG when duplicates in list a\n",
+    "def array_diff(a, b):\n",
+    "    # O(1) or O(n)?\n",
+    "    remove = set(a).intersection(set(b))\n",
+    "    # O(n)\n",
+    "    for r in remove:\n",
+    "        del a[a.index(r)]\n",
+    "        \n",
+    "    return a\n",
+    "\n",
+    "# second attempt:\n",
+    "def array_diff2(a, b):\n",
+    "    # this must've added some overhead i didnt account for\n",
+    "    remove = set(a).intersection(set(b))\n",
+    "    return [x for x in a if x not in remove] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# community \"Best practice\" solution\n",
+    "def array_diff3(a, b):\n",
+    "    return [x for x in a if x not in b]\n",
+    "\n",
+    "# so much simpler than mine"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.63 µs ± 239 ns per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit -n 1000\n",
+    "array_diff([1,2,2], [2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.94 µs ± 157 ns per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit -n 1000\n",
+    "array_diff2([1,2,2], [2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.43 µs ± 544 ns per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit -n 1000\n",
+    "array_diff3([1,2,2], [2])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Kata: Does my number look big in this?\n",
+    "A Narcissistic Number is a positive number which is the sum of its own digits, each raised to the power of the number of digits in a given base. In this Kata, we will restrict ourselves to decimal (base 10).\n",
+    "\n",
+    "Your code must return true or false depending upon whether the given number is a Narcissistic number in base 10.\n",
+    "\n",
+    "Error checking for text strings or other invalid inputs is not required, only valid positive non-zero integers will be passed into the function\n",
+    "\n",
+    "**NOTE**: I don't know how to iterate through an int unless it's a string."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# first try, uses functools: WRONG\n",
+    "import functools\n",
+    "\n",
+    "def narcissistic( value ):\n",
+    "    str_val = str(value)\n",
+    "    digits = len(str_val)\n",
+    "#     print(str_val.split())\n",
+    "    return int(functools.reduce(\n",
+    "        lambda x, y: int(x)**digits + int(y)**digits, [str_val]\n",
+    "    )) == value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['122']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "122"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "narcissistic(122)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# second try, uses functools\n",
+    "\n",
+    "def narcissistic2( value ):\n",
+    "    str_val = str(value)\n",
+    "    digits = len(str_val)\n",
+    "    total = sum([int(x)**digits for x in str_val])\n",
+    "    return total == value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.52 µs ± 384 ns per loop (mean ± std. dev. of 7 runs, 500 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit -n 500\n",
+    "narcissistic2(7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Community one-liner solution\n",
+    "def narcissistic3(value):\n",
+    "    return value == sum(int(x) ** len(str(value)) for x in str(value))"
+   ]
   }
  ],
  "metadata": {
@@ -469,7 +686,7 @@
     "height": "calc(100% - 180px)",
     "left": "10px",
     "top": "150px",
-    "width": "284.594px"
+    "width": "165px"
    },
    "toc_section_display": true,
    "toc_window_display": true
